fixed offcenter stuff

--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -393,7 +393,7 @@ body, html {
 
             &.btn {
                 padding: .7em 2.5em;
-                margin-left: 2em;
+                margin-left: 0;
             }
         }
 
